[package]
name = "audio-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
rtrb = "0.2.0"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false